# singleton

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  a1.cpp  a2.cpp  b.cpp  run.sh  z.cpp
include/: toto.h
